fix brand z-index

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -152,6 +152,8 @@ h4 {
 		font-family: Lobster, cursive;
 		font-size: 24px;
 		a {
+			position: relative;
+			z-index: 101;
 			color: $dark-gray;
 		}
 	}
